feat: add php8.4

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,7 +26,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: ['8.3']
+        version: ['8.3','8.4']
 
     steps:
       # —— Setup Environment actions  ——————————————————————————————————————————————
@@ -66,8 +66,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        name: [ 'php-fpm-alpine-api-pgsql', 'php-fpm-alpine-gui' ]
-        version: [ '8.3' ]
+        name: ['php-fpm-alpine-api-pgsql', 'php-fpm-alpine-gui']
+        version: ['8.3','8.4']
 
     steps:
       # —— Setup Environment actions  ——————————————————————————————————————————————
