--- a/php/conf.d/php.ini
+++ b/php/conf.d/php.ini
@@ -12,6 +12,7 @@ opcache.interned_strings_buffer = 16
 opcache.max_accelerated_files = 20000
 opcache.memory_consumption = 256
 opcache.enable_file_override = 1
+opcache.validate_timestamps = 0
 opcache.preload_user=www-data
 opcache.preload=/srv/app/config/preload.php
 openssl.cafile=/etc/ssl/certs/ca-certificates.crt
