feat: hand over GITHUB_TOKEN va secret mount

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -104,5 +104,7 @@ jobs:
             PHP_BUILD_VERSION=${{ matrix.version }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          secrets: |
+            "github_token=${{ secrets.GITHUB_TOKEN }}"
           tags: |
             ${{ env.ORG }}/${{ matrix.name }}:${{ matrix.version }}
